Fix header spacing. Fix search icon color

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -2,27 +2,31 @@
   height: 136px;
   background: url(../../assets/mobile/bg-pattern-header.svg) no-repeat;
   background-size: cover;
+  padding-top: 32px;
 }
 
 .header__container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 100%;
 }
 
 @media (min-width: 768px) {
   .header {
+    height: 160px;
     background: url(../../assets/tablet/bg-pattern-header.svg) no-repeat;
     background-size: cover;
     border-bottom-left-radius: 100px;
+    padding-top: 42px;
   }
 }
 
 @media (min-width: 1440px) {
   .header {
+    height: 162px;
     background: url(../../assets/desktop/bg-pattern-header.svg) no-repeat;
     background-size: cover;
     border-bottom-left-radius: 100px;
+    padding-top: 45px;
   }
 }
